# CodeCleaner

./: .gitignore  Cargo.toml  README.md  config.example.toml  rules.toml
src/: cli.rs  config.rs  error.rs  main.rs
src/azure/: client.rs  comments.rs  diff.rs  mod.rs  types.rs
src/fix/: analyzer.rs  git.rs  mod.rs  patcher.rs  report.rs
src/gemini/: chunker.rs  client.rs  mod.rs  prompt.rs  types.rs
src/orchestrator/: fix.rs  mod.rs  review.rs
src/review/: comment.rs  formatter.rs  mapper.rs  mod.rs
src/rules/: engine.rs  learning.rs  mod.rs  store.rs  types.rs
src/transport/: cache.rs  mod.rs  rate_limiter.rs  retry.rs
src/ui/: mod.rs  progress.rs  prompt.rs  report.rs
